# libroqr

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yml
cmake/: FindPicoquic.cmake  android-jni.md  tsan.supp
core/: CMakeLists.txt
core/include/roqr/: error.hpp  flow_table.hpp  frame.hpp  varint.hpp  version.hpp
core/src/: error.cpp  flow_table.cpp  frame.cpp  varint.cpp  version.cpp
docs/: guide.md
docs/superpowers/plans/: 2026-07-04-libroqr-core.md  2026-07-04-libroqr-quic.md  2026-07-04-libroqr-rtmp.md  2026-07-05-libroqr-ffi-jni.md  2026-07-05-libroqr-gateways.md
docs/superpowers/specs/: 2026-07-04-libroqr-design.md
examples/: CMakeLists.txt  duplex_main.cpp  egress_main.cpp  ingest_main.cpp
examples/java/: PlaySample.java  PublishSample.java  README.md
examples/rust/: Cargo.toml  README.md  build.rs
examples/rust/src/: main.rs
ffi/: CMakeLists.txt
ffi/include/roqr/: roqr.h  roqr_rtmp.h
ffi/src/: roqr_ffi.cpp  roqr_rtmp_ffi.cpp
gateway/: CMakeLists.txt
gateway/include/roqr/gateway/: bridge.hpp  connection_supervisor.hpp  egress.hpp  gap.hpp  ingest.hpp  player_queue.hpp  rtmp_commands.hpp
gateway/src/: bridge.cpp  connection_supervisor.cpp  egress.cpp  ingest.cpp  player_queue.cpp  rtmp_commands.cpp
jni/: CMakeLists.txt
jni/java/org/red5/roqr/: DeliveryMode.java  EgressGateway.java  Frame.java  IngestGateway.java  MessageListener.java  RoqrClient.java  RoqrNative.java  package-info.java
jni/src/: roqr_jni.cpp
quic/: CMakeLists.txt
quic/include/roqr/quic/: client.hpp  context.hpp  delivery.hpp  outbound_queue.hpp
quic/src/: client.cpp  context.cpp  delivery.cpp
rtmp/: CMakeLists.txt
rtmp/include/roqr/rtmp/: amf0.hpp  chunk_reader.hpp  chunk_writer.hpp  classify.hpp  handshake.hpp  message.hpp  server_session.hpp
rtmp/src/: amf0.cpp  chunk_reader.cpp  chunk_writer.cpp  classify.cpp  handshake.cpp  server_session.cpp
scripts/: setup_picoquic_deps.sh
tests/: CMakeLists.txt
tests/core/: flow_table_test.cpp  frame_test.cpp  varint_test.cpp  version_test.cpp
tests/e2e/: CMakeLists.txt  run_ffmpeg_e2e.sh
tests/ffi/: ffi_smoke_test.cpp
tests/gateway/: bridge_test.cpp  connection_supervisor_test.cpp  gap_recovery_test.cpp  media_router_test.cpp  player_queue_test.cpp  rtmp_commands_test.cpp
tests/integration/: client_connect_test.cpp  client_idle_timeout_test.cpp  close_codes_test.cpp  datagram_test.cpp  egress_reconnect_test.cpp  egress_test.cpp  ffi_client_test.cpp  ffi_gateway_test.cpp  flow_gating_test.cpp  flow_reset_test.cpp  ingest_reconnect_test.cpp  ingest_test.cpp  relay_media_test.cpp  relay_test.cpp  server_lifecycle_test.cpp  stream_echo_test.cpp
tests/jni/: CMakeLists.txt  RoqrClientTest.java  RoqrGatewayTest.java  RoqrSmokeTest.java
tests/quic/: context_test.cpp  delivery_test.cpp  outbound_queue_test.cpp
tests/rtmp/: amf0_decode_test.cpp  amf0_encode_test.cpp  chunk_reader_test.cpp  chunk_writer_test.cpp  classify_ertmp_test.cpp  classify_legacy_test.cpp  handshake_test.cpp  server_session_test.cpp
tools/relayd/: CMakeLists.txt
tools/relayd/include/roqr/relayd/: media_router.hpp  server.hpp
tools/relayd/src/: main.cpp  media_router.cpp  server.cpp
