# Placeholder: roqr-relayd (the roqr-relayd-lib target and CLI binary) is
# implemented in Plan 2 Task 3. This stub exists only so that
# add_subdirectory(tools/relayd) in the root CMakeLists.txt succeeds while
# ROQR_BUILD_TOOLS=ON in the dev preset, ahead of Task 3 landing. It defines
# no targets and should be replaced wholesale by Task 3.
